# FEM-Study

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  temp.txt
meshes/: 100n_4h.msh  30n_1h_circle.msh  first_mesh.msh  first_mesh_no_hole.msh  no_hole_n100.msh  one_hole_n100.msh  one_hole_n15.msh  one_hole_n200.msh  one_hole_n5.msh  one_hole_n50.msh
meshes/1h_exponential_series/: 128n_1h.msh  16n_1h.msh  32n_1h.msh  4n_1h.msh  64n_1h.msh  8n_1h.msh
meshes/1h_linear_circle_series/: 100n_1h_circle.msh  102n_1h_circle.msh  104n_1h_circle.msh  106n_1h_circle.msh  108n_1h_circle.msh  10n_1h_circle.msh  110n_1h_circle.msh  112n_1h_circle.msh  114n_1h_circle.msh  116n_1h_circle.msh  118n_1h_circle.msh  120n_1h_circle.msh  122n_1h_circle.msh  124n_1h_circle.msh  126n_1h_circle.msh  128n_1h_circle.msh  12n_1h_circle.msh  130n_1h_circle.msh  132n_1h_circle.msh  134n_1h_circle.msh  136n_1h_circle.msh  138n_1h_circle.msh  140n_1h_circle.msh  142n_1h_circle.msh  144n_1h_circle.msh  146n_1h_circle.msh  148n_1h_circle.msh  14n_1h_circle.msh  150n_1h_circle.msh  152n_1h_circle.msh  154n_1h_circle.msh  156n_1h_circle.msh  158n_1h_circle.msh  160n_1h_circle.msh  162n_1h_circle.msh  164n_1h_circle.msh  166n_1h_circle.msh  168n_1h_circle.msh  16n_1h_circle.msh  170n_1h_circle.msh  (+50 more)
meshes/1h_linear_series/: 100n_1h.msh  10n_1h.msh  110n_1h.msh  120n_1h.msh  130n_1h.msh  140n_1h.msh  150n_1h.msh  160n_1h.msh  170n_1h.msh  180n_1h.msh  20n_1h.msh  30n_1h.msh  40n_1h.msh  50n_1h.msh  60n_1h.msh  70n_1h.msh  80n_1h.msh  90n_1h.msh
meshes/1h_quadratic_series/: 100n_1h.msh  121n_1h.msh  144n_1h.msh  169n_1h.msh  16n_1h.msh  25n_1h.msh  36n_1h.msh  49n_1h.msh  64n_1h.msh  81n_1h.msh  9n_1h.msh
scripts/: complexity_comparison.txt  l2_error_convergence.txt  number_of_entities.txt  plot_sparse.py  plot_time_series.py  run_profiling.sh
src/: FEM.cpp  FEM.h  FEM_conj_grad.cpp  FEM_conj_grad.h  FEM_naive.cpp  FEM_naive.h  FEM_ocl.cpp  FEM_ocl.h  L2_error_norm.cpp  benchmark.h  conj_grad.ocl  geometry.cpp  geometry.h  linalg.cpp  linalg.h  main.cpp  main_naive.cpp  matrix.cpp  matrix.h  test.cpp  time_series.cpp  utils.h
src/Geometries/: geometry.cpp  geometry.h  geometry_eigen.cpp  geometry_eigen.h
src/MatrixImpl/: band_matrix.cpp  band_matrix.h  conj_grad.cpp  conj_grad.h  conj_grad.ocl  eigen_impl.h  naive_impl.cpp  naive_impl.h  naive_matrix.cpp  naive_matrix.h  sparse_matrix.cpp  sparse_matrix.h  stack_matrix.cpp  stack_matrix.h
